scss/sections/_footer.scss
footer {
	background-color: #10497D;
	> div {
		padding: $layout-margin;
		
		hr {
			border-bottom: 1px solid #fff;
			margin-bottom: $layout-margin;
			margin-top: $layout-margin; 
			display: block;
		}

		.footer-ambassador {
			border: 0px solid #fff;
			
			div:last-child {
				margin-right: 0px;
			}
			div {
				display: inline-block;
				text-align: center;
				margin-right: 2.5%;
				margin-top: 18px;
				width: 20vw;
				height: 20vw;
				border: 0px solid #f00;

				img {
					//height: 250px;
					width: 100%;
				}
				p {
					margin-top: 18px;
				}
			}
		}

		.footer-sitemap {
			//height: 300px;
			border: 0px solid #f00;
			
			div:last-child {
				margin-right: 0px;
			}
			div {
				display: inline-block;
				width: 11vw;
				margin-right: 11vw;
				vertical-align: top;
				border: 0px solid #fff;



				li {
					list-style: none;
					padding: 0;
					margin: 0;

					a {
						text-decoration: none;
					}
				}
			}
		}
		.footer-info {
			border: 0px solid #f00;
			
			div {
				display: inline-block;
				width: 11vw;
				margin-right: 11vw;
				vertical-align: top;
				border: 0px solid #fff;
			}
			div:first-child {

				p {
					margin-bottom: 5px;
				}
			}
			div:nth-child(2) {

				p {
					margin-bottom: 30px;
				}
			}
			div:last-child {
				margin-right: 0px;
				
				a {
					text-decoration: none;
					display: block;
					padding-bottom: 15px;
				}
				img {
					height: 30px;
					margin-right: 15px;
					vertical-align: middle;
				}

			}
			h3 {
				margin-bottom: 30px;
			}
		}
	}
}






@media screen and (max-width: 1200px) and (min-width: 769px) {

}
@media screen and (max-width: 1030px) and (min-width: 769px) {
	footer {
		> div {
			.footer-ambassador {
				text-align: center;
			}
		}
	}


	div#footer-ambassador-single {
		width: 40vw;
		height: 40vw;
		margin: 10px;
		margin-top: 30px;


		img {
			//height: 250px;
			width: 100%;
			height: 80%;
		}
	}
	#ambassador-name {
		font-size: 2.5vw;
	}
}

@media screen and (max-width: 768px) {
	footer {
		> div {
			.footer-ambassador {
				text-align: center;

			}
			.footer-sitemap {
				div {
					margin-right: 0;
					width: 82vw;
				}
			}
			.footer-info {
				div {
					margin-right: 0;
					width: 82vw;
				}
			}
		}
		#ambassador-name {
				font-size: 5vw;
		}

	}
	#ambassador-title {
				font-size: 8vw;
			}

	div#footer-ambassador-single {
		width: 80vw;
		height: 80vw;


		img {
			width: 100%;
			height:80%;
		}
	}

}

